--- a/css/style.css
+++ b/css/style.css
@@ -37,19 +37,21 @@
 
 }
 
-.links 	{
-	height: 80px;
+.links	{
+	height: 70px;	
+	background-color: #0093E9;
+	background-image: linear-gradient(270deg, #0093E9 0%, #80D0C7 100%);
+	
+}
+
+.links-hit {
 	font-family: 'NeueMachina-Medium';
 	color: white;
 	font-size: 15px;
 	font-weight: normal;
-	text-align: center;
-	padding-top: 5px;
+	margin-left: 250px;
 	text-transform: uppercase;
 	text-decoration: underline;
-	background-color: #0093E9;
-	background-image: linear-gradient(270deg, #0093E9 0%, #80D0C7 100%);
-	
 }
 
 a {
@@ -83,6 +85,12 @@ a {
 
 .upd {
 	text-decoration: underline;
+}
+
+
+.reklama {
+	text-decoration: underline;
+	color: purple;
 }
 
 
