--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,19 @@
 	src:url(../font/NeueMachina-Light.otf);
 	font-family: "NeueMachina-Light";
 	font-weight: normal;
+}
+@font-face {
 	src:url(../font/NeueMachina-Regular.otf);
 	font-family: "NeueMachina-Regular";
 	font-weight: normal;
+}
+@font-face {
 	src:url(../font/NeueMachina-Medium.otf);
 	font-family: "NeueMachina-Medium";
 	font-weight: normal;
 }
+	
+
 
 
 .header-container  { 
@@ -58,7 +64,7 @@
 	color: white;
 	font-size: 15px;
 	font-weight: normal;
-	margin-left: 250px;
+	text-align: center;
 	text-transform: uppercase;
 	text-decoration: underline;
 }
