--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@
 }
 
 .links-hit {
-	font-family: 'NeueMachina-Medium';
+	font-family: 'NeueMachina-Regular';
 	color: white;
 	font-size: 15px;
 	font-weight: normal;
@@ -88,7 +88,7 @@ a {
 }
 
 .footer-content {
-	font-family: "NeueMachina-Medium";
+	font-family: "NeueMachina-Light";
 	color: white;
 	font-size: 17px;
 	font-weight: normal;
